--- a/Posttest4/register.css
+++ b/Posttest4/register.css
@@ -3,7 +3,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: url(./Resource/background.jpg);
+  background: url(/Resource/background.jpg);
 }
 
 .wrapper {
